@@ -1207,10 +1207,13 @@ PHP_FUNCTION(curl_getinfo)
 		switch (option) {
 		case CURLINFO_EFFECTIVE_URL: 
 		case CURLINFO_CONTENT_TYPE: {
-			char *s_code;
+			char *s_code = NULL;
 
-			curl_easy_getinfo(ch->cp, option, &s_code);
-			RETURN_STRING(s_code, 1);
+			if (curl_easy_getinfo(ch->cp, option, &s_code) == CURLE_OK && s_code) {
+				RETURN_STRING(s_code, 1);
+			} else {
+				RETURN_FALSE;
+			}
 
 			break;
 		}
@@ -1220,10 +1223,13 @@ PHP_FUNCTION(curl_getinfo)
 		case CURLINFO_FILETIME: 
 		case CURLINFO_SSL_VERIFYRESULT: 
 		case CURLINFO_REDIRECT_COUNT: {
-			long code;
+			long code = 0;
 
-			curl_easy_getinfo(ch->cp, option, &code);
-			RETURN_LONG(code);
+			if (curl_easy_getinfo(ch->cp, option, &code) == CURLE_OK) {
+				RETURN_LONG(code);
+			} else {
+				RETURN_FALSE;
+			}
    
 			break;
 		}
@@ -1239,10 +1245,13 @@ PHP_FUNCTION(curl_getinfo)
 		case CURLINFO_CONTENT_LENGTH_UPLOAD: 
 		case CURLINFO_STARTTRANSFER_TIME:
 		case CURLINFO_REDIRECT_TIME: {
-			double code;
+			double code = 0.0;
 	
-			curl_easy_getinfo(ch->cp, option, &code);
-			RETURN_DOUBLE(code);
+			if (curl_easy_getinfo(ch->cp, option, &code) == CURLE_OK) {
+				RETURN_DOUBLE(code);
+			} else {
+				RETURN_FALSE;
+			}
 
 			break;
 		}
